Fix navbar background in dark mode

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -9,6 +9,10 @@ header {
     box-shadow: 0 4px 25px rgba(0, 0, 0, 0.08);
 }
 
+.navbar {
+    background-color: var(--background-color) !important;
+}
+
 #profileHeader {
     width: 100%;
 }
